# PathOfBuilding-SimpleGraphic

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md  README_zh-rCN.md  SimpleGraphic.rc  SimpleGraphic.sln  SimpleGraphic.vcxproj  SimpleGraphic.vcxproj.filters  config.h  resource.h  ui.h  ui_api.cpp  ui_console.cpp  ui_console.h  ui_debug.cpp  ui_debug.h  ui_local.h  ui_main.cpp  ui_main.h  ui_subscript.cpp  ui_subscript.h  vcpkg-configuration.json  vcpkg-linux.txt  vcpkg-macos.txt  vcpkg.json  vcpkg.txt
.github/workflows/: main.yml
_lib/: gif_hash.h  gif_lib.h  giflib5.lib  glext.h  libpng16_static.lib  lua51.lib  tiffconf.h  zlibstatic.lib
cmake/: FindLuaJIT.cmake
dep/glad/include/glad/: egl.h  gles2.h
engine/: common.h  core.h  render.h  system.h
engine/common/: base64.c  base64.h  common.cpp  console.cpp  console.h  keylist.h  memtrak3.cpp  memtrak3.h  streams.cpp  streams.h
engine/core/: core_compress.cpp  core_compress.h  core_config.cpp  core_config.h  core_image.cpp  core_image.h  core_main.cpp  core_main.h  core_tex_manipulation.cpp  core_tex_manipulation.h  core_video.cpp  core_video.h
engine/luautf8/: lutf8lib.c
engine/render/: FontFactory.cpp  FontFactory.h  r_font.cpp  r_font.h  r_font_u.cpp  r_font_u.h  r_local.h  r_main.cpp  r_main.h  r_texture.cpp  r_texture.h
engine/system/: sys_console.h  sys_main.h  sys_opengl.h  sys_video.h
engine/system/win/: sys_console.cpp  sys_console_unix.cpp  sys_local.h  sys_macos.mm  sys_main.cpp  sys_opengl.cpp  sys_video.cpp
libs/LZip/: CMakeLists.txt  lzip.cpp
vcpkg-ports/ports/glfw3/3.4_1/: glfw-3.4_disable_dinput8.patch  portfile.cmake
vcpkg-ports/ports/gli/2021-07-06_3/: bump-cmake-version.patch  disable-test.patch  portfile.cmake  vcpkg.json
vcpkg-ports/ports/luajit/2022-08-11_1/: 001-fix-build-path.patch  002-fix-crt-linkage.patch  portfile.cmake
vcpkg-ports/ports/luajit/2023-04-16/: 003-do-not-set-macosx-deployment-target.patch  msvcbuild.patch  portfile.cmake  vcpkg.json
vcpkg-ports/ports/luajit/2023-04-16_1/: msvcbuild.patch  pob-wide-crt.patch  portfile.cmake  vcpkg.json
vcpkg-ports/ports/luajit/2025-04-07_1/: portfile.cmake  vcpkg.json
vcpkg-ports/ports/luajit/2025-07-24_1/: 003-do-not-set-macosx-deployment-target.patch  luajit.pc.win.in  msvcbuild.patch  pob-wide-crt.patch  portfile.cmake  vcpkg.json
vcpkg-ports/versions/: baseline.json
vcpkg-ports/versions/g-/: glfw3.json  gli.json
vcpkg-ports/versions/l-/: luajit.json
win/: entry.cpp
